fixed mobile cta z-index

--- a/src/sass/components/_property.sass
+++ b/src/sass/components/_property.sass
@@ -354,7 +354,7 @@
   &__mobile-cta
     display: none
     position: fixed
-    z-index: 9
+    z-index: 8
     bottom: 0px
     left: 0
     right: 0
